# pkp-tutorials

./: .gitignore  .merlin  .ocamlformat  _tags  dune-project  mkdoc  pkp.opam  test.ipynb
balanced_net/: dune
balanced_network/: lib.ml  lib.mli
docs/: index.html
docs/pkp/: index.html
docs/pkp/Pkp/: index.html
docs/pkp/Pkp/Balanced_net/: index.html
docs/pkp/Pkp/Hopfield/: index.html
docs/pkp/Pkp/Misc/: index.html
docs/pkp/Pkp/Neuron/: index.html
docs/pkp/Pkp/RL/: index.html
docs/pkp/Pkp__Balanced_net/: index.html
docs/pkp/Pkp__Hopfield/: index.html
docs/pkp/Pkp__Misc/: index.html
docs/pkp/Pkp__Neuron/: index.html
docs/pkp/Pkp__RL/: index.html
docs/pkp/Pkp__Rate_net/: index.html
docs/pkp/Pkp__Reinforcement_learning/: index.html
docs/pkp/Pkp__Single_neuron/: index.html
docs/pkp/Pkp__V1/: index.html
docs/pkp/Pkp__Visual_coding/: index.html
notebooks/: balanced_net.ipynb  coursework1.ipynb  coursework2.ipynb  hopfield.ipynb  ocaml-intro.ipynb  reinforcement-learning.ipynb  single_neurons.ipynb  visual-coding.ipynb  visual-cortex.ipynb
notebooks/lectures/: decisions.ipynb  perception.ipynb  poisson.ipynb  rate_models.ipynb
notebooks/solutions/: balanced_net.ipynb
src/: balanced_net.ml  balanced_net.mli  dune  hopfield.ml  hopfield.mli  misc.ml  misc.mli  neuron.ml  neuron.mli  pkp.ml  pkp_balanced_net.ml  pkp_misc.ml  pkp_misc.mli  pkp_rate_net.mli  rL.ml  rL.mli  rate_net.ml  reinforcement_learning.ml  reinforcement_learning.mli  single_neuron.ml  single_neuron.mli  v1.ml  v1.mli  visual_coding.ml  visual_coding.mli
(+43 files in other folders)
