opam-version: "2.0"
maintainer: "Guillaume Hennequin"
authors: [ "Guillaume Hennequin" ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build & >= "1.1.0"}
  "base-unix"
  "owl" {>= "0.4.0"}
  "jupyter" {>= "2.4.0"}
  "jupyter.notebook" {>= "2.4.0"}
]
synopsis: "Balanced spiking networks"
